캘린더 수정

--- a/src/app/calendar/style.css
+++ b/src/app/calendar/style.css
@@ -3,6 +3,7 @@
   /* height: 300px; */
   border: 1px solid;
   /* padding: 12px; */
-  width: 1200px;
+  width: 1080px;
+  /* height: 500px; */
   margin: 100px auto 0px;
 }
