--- a/src/app/components/Calendar/style.css
+++ b/src/app/components/Calendar/style.css
@@ -3,6 +3,7 @@
   /* gap: 16px; */
   display: grid;
   position: relative;
+  height: 100%;
   grid-template-columns: minmax(50px, auto) 1fr;
 }
 
@@ -10,6 +11,8 @@
   border: 1px solid red;
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
+  /* justify-content: center; */
   gap: 8px;
 
   div {
@@ -29,14 +32,22 @@
 }
 
 .date {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   display: flex;
   flex-direction: column;
+  /* justify-content: center; */
   gap: 8px;
   margin-left: 16px;
-  overflow-x: scroll;
+  /* overflow-y: visible;
+  overflow-x: clip;
+  min-width: 0; */
+  overflow: auto;
+  white-space: nowrap;
+
+  /* overflow-y: scroll; */
   /* overflow-y: visible; */
   /* overflow: auto; */
+  /* overflow: clip; */
   flex-wrap: wrap;
 }
 .date-container {
@@ -66,30 +77,68 @@
   position: absolute;
   left: 0px;
   top: 0px;
+  background-color: red;
+  z-index: 1;
+
+  /* overflow-y: hidden; */
+  /* bottom: 55px; */
   /* width: 100px; */
   height: 40px;
+  /* background-color: red; */
+  /* z-index: 1; */
+  /* bottom: 80px; */
 }
-.overlay {
+.overlay-top {
   border: 1px solid;
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  /* transform: translateY(-15px); */
-  bottom: 55px;
   min-width: 182px;
+  /* left: 50%; */
+  /* transform: translateX(-50%); */
+  bottom: 55px;
   background-color: #00000a;
   padding: 8px 16px;
   border-radius: 10px;
-  z-index: 9999;
-  text-align: center;
+  z-index: 1;
+  /* text-align: center; */
+  display: flex;
+  align-items: center;
+
+  justify-content: space-between;
 
   strong {
     color: #fff;
-    font-size: 16px;
+    font-size: 14px;
   }
   p {
     color: #fff;
-    font-size: 16px;
+    font-size: 14px;
+  }
+}
+
+.overlay-bottom {
+  border: 1px solid;
+  position: absolute;
+  min-width: 182px;
+  /* left: 50%; */
+  /* transform: translateX(-50%); */
+  top: 55px;
+  background-color: #00000a;
+  padding: 8px 16px;
+  border-radius: 10px;
+  z-index: 1;
+
+  display: flex;
+  align-items: center;
+
+  justify-content: space-between;
+
+  strong {
+    color: #fff;
+    font-size: 14px;
+  }
+  p {
+    color: #fff;
+    font-size: 14px;
   }
 }
 
