--- a/src/app/calendar/style.css
+++ b/src/app/calendar/style.css
@@ -1,9 +1,24 @@
 .calendar {
   /* width: 300px; */
   /* height: 300px; */
-  border: 1px solid;
+  /* border: 1px solid; */
   /* padding: 12px; */
   width: 1080px;
   /* height: 500px; */
   margin: 100px auto 0px;
+}
+
+.buttons {
+  display: flex;
+  /* width: 150px; */
+  /* justify-content: space-between; */
+  /* margin: ; */
+  gap: 20px;
+
+  margin-bottom: 30px;
+  border: 1px solid red;
+}
+
+.result {
+  margin: 10px 0px;
 }
