--- a/src/app/components/Calendar/style.css
+++ b/src/app/components/Calendar/style.css
@@ -1,6 +1,4 @@
 .calendar-container {
-  /* display: flex; */
-  /* gap: 16px; */
   display: grid;
   position: relative;
   height: 100%;
@@ -8,7 +6,6 @@
 }
 
 .unit {
-  border: 1px solid red;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -20,10 +17,8 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
+    cursor: pointer;
     height: 40px;
-    span {
-      font-size: 10px;
-    }
     strong {
       font-weight: 600;
       font-size: 14px;
@@ -32,25 +27,16 @@
 }
 
 .date {
-  /* border: 1px solid blue; */
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   gap: 8px;
   margin-left: 16px;
-  /* overflow-y: visible;
-  overflow-x: clip;
-  min-width: 0; */
   overflow: auto;
   white-space: nowrap;
-
-  /* overflow-y: scroll; */
-  /* overflow-y: visible; */
-  /* overflow: auto; */
-  /* overflow: clip; */
   flex-wrap: wrap;
 }
-.date-container {
+
+.date-row {
   display: flex;
   gap: 2px;
 }
@@ -60,6 +46,66 @@
   background-color: #f6f6f6;
   font-size: 10px;
   position: relative;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.col-hover-box {
+  display: none;
+  visibility: hidden;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 40px;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.col-hover-box .date-tooltip {
+  top: -40px;
+  padding: 8px 16px;
+  background-color: #00000a;
+  border-radius: 10px;
+  color: #fff;
+  font-weight: 700;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute !important;
+  display: inline-block;
+}
+
+.row-hover-box {
+  display: none;
+  visibility: hidden;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  height: 40px;
+
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.row-visible {
+  display: block;
+  visibility: visible;
+}
+.col-visible {
+  display: block;
+  visibility: visible;
+}
+
+.date-view {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: transparent;
+
+  span {
+    color: #99999d;
+    margin-top: auto;
+    font-weight: 600;
+  }
 }
 
 .date-item.start {
@@ -72,21 +118,17 @@
 .date-item.active-contract {
   background-color: #00000a;
 }
+.date-item.cleanup-day {
+  background-color: #ccccce;
+}
 
 .active-box {
   position: absolute;
   left: 0px;
   top: 0px;
-  background-color: red;
   z-index: 1;
 
-  /* overflow-y: hidden; */
-  /* bottom: 55px; */
-  /* width: 100px; */
   height: 40px;
-  /* background-color: red; */
-  /* z-index: 1; */
-  /* bottom: 80px; */
 }
 .overlay-top {
   border: 1px solid;
@@ -141,42 +183,3 @@
     font-size: 14px;
   }
 }
-
-/* .unit {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  border: 1px solid;
-
-  div {
-    height: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    span {
-      font-size: 10px;
-    }
-    strong {
-      font-weight: 600;
-      font-size: 14px;
-    }
-  }
-}
-
-.date {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid;
-
-  overflow-x: scroll;
-}
-
-.grid-container {
-  display: flex;
-  flex-wrap: nowrap;
-}
-.date-item {
-  width: 40px;
-  height: 40px;
-  border: 1px solid;
-} */
