--- a/src/app/components/Calendar/style.css
+++ b/src/app/components/Calendar/style.css
@@ -9,7 +9,6 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  /* justify-content: center; */
   gap: 8px;
 
   div {
@@ -80,7 +79,6 @@
   left: 0px;
   top: 0px;
   height: 40px;
-
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
@@ -127,52 +125,42 @@
   left: 0px;
   top: 0px;
   z-index: 1;
-
   height: 40px;
 }
 .overlay-top {
   border: 1px solid;
   position: absolute;
-  min-width: 182px;
-  /* left: 50%; */
-  /* transform: translateX(-50%); */
+  width: 182px;
   bottom: 55px;
   background-color: #00000a;
   padding: 8px 16px;
   border-radius: 10px;
   z-index: 1;
-  /* text-align: center; */
   display: flex;
   align-items: center;
-
   justify-content: space-between;
-
-  strong {
-    color: #fff;
-    font-size: 14px;
-  }
-  p {
-    color: #fff;
-    font-size: 14px;
-  }
 }
 
 .overlay-bottom {
   border: 1px solid;
   position: absolute;
-  min-width: 182px;
-  /* left: 50%; */
-  /* transform: translateX(-50%); */
+  width: 182px;
   top: 55px;
   background-color: #00000a;
   padding: 8px 16px;
   border-radius: 10px;
   z-index: 1;
-
   display: flex;
   align-items: center;
-
   justify-content: space-between;
+}
+
+.text-tooltip {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  box-sizing: border-box;
+  color: #fff;
 
   strong {
     color: #fff;
