--- a/src/app/components/RenderComponent/style.css
+++ b/src/app/components/RenderComponent/style.css
@@ -34,6 +34,34 @@
   white-space: nowrap;
   flex-wrap: wrap;
 }
+.overlay {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  border: 1px solid;
+  position: relative;
+}
+.left {
+  position: absolute;
+  right: 100px;
+
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  z-index: 1;
+}
+
+.mask {
+  /* visibility: hidden; */
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  z-index: 1;
+}
+.mask.visible {
+  visibility: visible;
+}
 
 .date-row {
   display: flex;
@@ -80,7 +108,6 @@
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 2;
 }
-
 .col-hover-box .date-tooltip {
   top: -40px;
   padding: 8px 16px;
@@ -92,16 +119,6 @@
   transform: translateX(-50%);
   position: absolute !important;
   display: inline-block;
-}
-
-.left-tool-tip {
-  left: 0px !important;
-  transform: translateX(0) !important;
-}
-.right-tool-tip {
-  left: unset !important;
-  right: 0px !important;
-  transform: translateX(0) !important;
 }
 
 .row-hover-box {
@@ -141,33 +158,17 @@
 }
 
 .date-item.start {
-  /* background-color: #d53f3f; */
-  background-color: #febf91;
+  background-color: #d53f3f;
 }
 .date-item.color {
-  /* background: #d79999; */
-  background-color: #93bbd1;
+  background: #d79999;
   cursor: pointer;
 }
 .date-item.active-contract {
   background-color: #00000a;
 }
 .date-item.cleanup-day {
-  /* background-color: #ccccce; */
   background-color: #ccccce;
-}
-.date-item.start.focus {
-  background-color: #ff7c1d;
-}
-.date-item.color.focus {
-  background-color: #356884;
-}
-.date-item.cleanup-day.focus {
-  background-color: #99999d;
-}
-.date-item.empty-room {
-  border: 2px solid;
-  box-sizing: border-box;
 }
 
 .active-box {
@@ -178,6 +179,7 @@
   height: 40px;
 }
 .overlay-top {
+  border: 1px solid;
   position: absolute;
   width: 182px;
   bottom: 55px;
@@ -185,12 +187,13 @@
   padding: 8px 16px;
   border-radius: 10px;
   z-index: 1;
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 .overlay-bottom {
+  border: 1px solid;
   position: absolute;
   width: 182px;
   top: 55px;
@@ -198,12 +201,9 @@
   padding: 8px 16px;
   border-radius: 10px;
   z-index: 1;
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: space-between;
-}
-.overlay-visible {
-  display: flex;
 }
 
 .text-tooltip {
@@ -221,16 +221,4 @@
     color: #fff;
     font-size: 14px;
   }
-}
-.empty-overlay {
-  position: absolute;
-  padding: 8px 16px;
-  border-radius: 10px;
-  background-color: #00000a;
-  bottom: 40px;
-  z-index: 1;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #fff;
-  font-weight: 700;
 }
