lib/react-query 세팅

--- a/src/app/components/Calendar/style.css
+++ b/src/app/components/Calendar/style.css
@@ -16,12 +16,15 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
-    cursor: pointer;
-    height: 40px;
+    height: 30px;
     strong {
       font-weight: 600;
       font-size: 14px;
     }
+  }
+  div:first-child {
+    margin-bottom: 12px;
+    height: 34px;
   }
 }
 
@@ -39,20 +42,21 @@
   display: flex;
   gap: 4px;
 }
+.date-row:first-child {
+  margin-bottom: 12px;
+}
 
-.date-row::after {
+/* .date-row::after {
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: 1;
-
   background-color: transparent;
   opacity: 0.2;
-  /* background-color: rgba(0, 0, 0, 0.2); */
-}
+} */
 .date-item {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   background-color: #f6f6f6;
   /* background-color: rgba(246, 246, 246, 0.2) !important; */
   font-size: 10px;
@@ -76,13 +80,13 @@
   position: absolute;
   left: 0px;
   top: 0px;
-  width: 40px;
+  width: 30px;
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 2;
 }
 
 .col-hover-box .date-tooltip {
-  top: -40px;
+  bottom: 5px;
   padding: 8px 16px;
   background-color: #00000a;
   border-radius: 10px;
@@ -92,6 +96,8 @@
   transform: translateX(-50%);
   position: absolute !important;
   display: inline-block;
+}
+.bottom-tooltip {
 }
 
 .left-tool-tip {
@@ -109,7 +115,7 @@
   visibility: hidden;
   position: absolute;
   left: 0px;
-  height: 40px;
+  height: 30px;
   /* background-color: rgba(0, 0, 0, 0.2); */
   border: 1px solid #000;
   z-index: 2;
@@ -127,16 +133,25 @@
 }
 
 .date-view {
+  width: 30px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   align-items: center;
-  background-color: transparent;
+  text-align: center;
+  cursor: pointer;
 
+  strong {
+    height: 17px;
+    font-size: 12px;
+    font-weight: 600;
+    color: #00000a;
+  }
   span {
+    font-size: 12px;
     color: #99999d;
     margin-top: auto;
     font-weight: 600;
+    height: 17px;
   }
 }
 
@@ -175,12 +190,12 @@
   left: 0px;
   top: 0px;
   z-index: 1;
-  height: 40px;
+  height: 30px;
 }
 .overlay-top {
   position: absolute;
   width: 182px;
-  bottom: 55px;
+  bottom: 35px;
   background-color: #00000a;
   padding: 8px 16px;
   border-radius: 10px;
@@ -193,7 +208,7 @@
 .overlay-bottom {
   position: absolute;
   width: 182px;
-  top: 55px;
+  top: 35px;
   background-color: #00000a;
   padding: 8px 16px;
   border-radius: 10px;
@@ -207,6 +222,7 @@
 }
 
 .text-tooltip {
+  flex: 1;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -227,10 +243,14 @@
   padding: 8px 16px;
   border-radius: 10px;
   background-color: #00000a;
-  bottom: 40px;
+  bottom: 30px;
   z-index: 1;
   left: 50%;
   transform: translateX(-50%);
   color: #fff;
   font-weight: 700;
+}
+.empty-overlay.bottom-tool-tip {
+  bottom: unset;
+  top: 30px;
 }
